--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     font-family: sans-serif;
     text-decoration: none;
+    list-style: none;
+    color: white;
 }
 
 .title{
@@ -32,18 +34,25 @@
     gap: 1em;
 }
 
-a{
+.cards_1{
     border: solid 1px white;
     padding: 1.8em;
     transition: linear 0.3s;
     color: white;
     padding: 1.8em;
 }
-a:hover{
+.cards_1:hover{
     color: black;
     background: white;
 }
 body{
     background: black;
 
+}
+.list{
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    margin-top: 2em;
+    font-size: 2em;
 }
